# chronolens

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  test.py
.github/workflows/: api-docker-publish.yaml  api_publish.yaml  docker-publish-amd64.yaml  docker-publish-arm64.yaml  docker-publish.yaml  libheif_publish.yaml  metadata_publish.yaml  preview_publish.yaml
api/: Cargo.toml
api/src/: main.rs
api/src/models/: api_models.rs  mod.rs  server_models.rs
api/src/routes/: clip_search.rs  cluster_previews.rs  create_face.rs  face_previews.rs  faces.rs  login.rs  logs.rs  media.rs  mod.rs  preview.rs  previews.rs  refresh.rs  register.rs  sync_full.rs  sync_partial.rs  upload_image.rs  upload_image2.rs
api/src/utils/: jwt.rs
client_gateway/: Cargo.toml  build.rs
database/: Cargo.toml
database/migration/: Cargo.toml
database/migration/src/: lib.rs  m001_setup.rs  m002_user.rs  m003_media.rs  m004_face.rs  m004_face_data.rs  m004_facedata.rs  m005_cluster.rs  m005_face_cluster.rs  m005_log.rs  m005_media_face.rs  m006_cluster.rs  m006_media_face.rs  m007_log.rs
database/src/: lib.rs
database/src/schema/: cluster.rs  face.rs  face_cluster.rs  face_data.rs  log.rs  media.rs  media_face.rs  mod.rs  prelude.rs  user.rs
docker/api/: Dockerfile
docker/base/: Dockerfile  fly.toml
docker/metadata/: Dockerfile
docker/preview/: Dockerfile  fly.toml
machine-learning/: main.py
metadata/: Cargo.toml
metadata/src/: handler.rs  main.rs
migrations/00000000000001_user/: up.sql
nats/: Cargo.toml
preview/: Cargo.toml  README.md
preview/src/: handler.rs  main.rs
src/: schema.rs
src/api_gateway/: db.rs  main.rs
src/api_gateway/models/: api_models.rs  server_models.rs
src/schema/: user.rs
