[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database"}
axum = { version = "0.7.7", features = ["http2", "multipart"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
dotenvy = "0.15.7"
envy = "0.4.2"
rust-s3 = "0.35.1"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio-util = "0.7.12"
axum-extra = { version = "0.9.4", features = ["async-read-body"] }
axum-core = "0.4.5"
futures-util = "0.3.31"
sha2 = "0.10.8"
hex = "0.4.3"
http = "1.1.0"
headers = "0.4.0"
base64 = "0.22.1"
