[package]
name = "client_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.2"
tonic-reflection = "0.12.2"

[build-dependencies]
protoc = "2.28.0"
tonic-build = "0.12.2"

[[bin]]
path="./src/client_gateway.rs"
name="client_gateway"
