[package]
name = "preview"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
tokio = { version = "1.40.0", features = ["full"] }
async-nats = "0.37.0"
image = "0.25.2"
libheif-rs = "1.0.2"
rust-s3 = "0.35.1"
futures-util = "0.3.30"
log = "0.4.22"
