[package]
name = "preview"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database"}
tokio = { version = "1.40.0", features = ["full"] }
async-nats = "0.37.0"
image = "0.25.2"
libheif-rs = "1.0.2"
rust-s3 = "0.35.1"
futures-util = "0.3.30"
log = "0.4.22"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.210", features = ["derive"] }
